--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "mammoth": "^1.6.0",
         "postcss": "^8.4.31",
+        "pdfjs-dist": "^4.10.38",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
