--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+# Employee Portal onboarding
+# If set, newly auto-created employee portal users will use this password.
+# Recommended: do not use a shared password in production.
+CREWLY_EMPLOYEE_DEFAULT_PASSWORD=
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
