--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "mammoth": "^1.6.0",
-        "postcss": "^8.4.31",
         "pdfjs-dist": "^4.10.38",
+        "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "laravel-echo": "^2.3.0",
+        "pusher-js": "^8.4.0"
     }
 }
