fix some issues

--- a/.env.example
+++ b/.env.example
@@ -34,11 +34,24 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
+
+# Local dev default (Mailpit)
 MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+# Gmail SMTP (production option)
+# 1) Set: MAIL_MAILER=gmail
+# 2) Set: MAIL_FROM_ADDRESS to your Gmail / Workspace email
+# 3) Use an App Password (not your normal password)
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_ENCRYPTION=tls
+# MAIL_USERNAME=your-email@gmail.com
+# MAIL_PASSWORD=your-app-password
+
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
