--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@tiptap/extension-placeholder": "^3.20.0",
+        "@tiptap/extension-underline": "^3.20.0",
+        "@tiptap/react": "^3.20.0",
+        "@tiptap/starter-kit": "^3.20.0",
         "laravel-echo": "^2.3.0",
         "pusher-js": "^8.4.0"
     }
