--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+# Demo environment
+# Max age (in days) before demo companies are expired/disabled by the demo:cleanup command.
+CREWLY_DEMO_MAX_DAYS=7
+
 # Employee Portal onboarding
 # If set, newly auto-created employee portal users will use this password.
 # Recommended: do not use a shared password in production.
