--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,16 @@ MAIL_ENCRYPTION=null
 # MAIL_USERNAME=your-email@gmail.com
 # MAIL_PASSWORD=your-app-password
 
+# Zoho SMTP (production option)
+# 1) Set: MAIL_MAILER=zoho
+# 2) Set: MAIL_FROM_ADDRESS to your Zoho email
+# 3) Fill in ZOHO_MAIL_* below (these avoid collisions with globally-set MAIL_* env vars)
+# ZOHO_MAIL_HOST=smtp.zoho.com
+# ZOHO_MAIL_PORT=587
+# ZOHO_MAIL_ENCRYPTION=tls
+# ZOHO_MAIL_USERNAME=your-email@yourdomain.com
+# ZOHO_MAIL_PASSWORD=your-app-password
+
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
