--- a/.env.example
+++ b/.env.example
@@ -69,6 +69,15 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# Brevo (Sendinblue) Transactional Email via HTTP API
+# Set MAIL_MAILER=brevo to use this transport.
+BREVO_API_KEY=
+# Optional overrides
+BREVO_ENDPOINT=https://api.brevo.com/v3/smtp/email
+BREVO_TIMEOUT=10
+# Optional: set to a logging channel name from config/logging.php (e.g. stack, single)
+BREVO_LOG_CHANNEL=
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
