--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "pusher/pusher-php-server": "^7.2",
+        "symfony/http-client": "6.4",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
